--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,26 +1,26 @@
 /* Fonts */
 @font-face {
         font-family: 'Anisette Std ';
-        src: url('src/fonts/AnisetteStd-Regular.otf') format('opentype');
+        src: url('../src/fonts/AnisetteStd-Regular.otf') format('opentype');
         font-weight: normal;
         font-style: normal;
 }
 @font-face {
         font-family: 'Anisette Std Bold';
-        src: url('src/fonts/AnisetteStd-Bold.otf') format('opentype');
+        src: url('../src/fonts/AnisetteStd-Bold.otf') format('opentype');
         font-weight: bold;
         font-style: normal;
 }
 
 @font-face {
         font-family: "Parisine Office Std";
-        src: url("src/fonts/ParisineOfficeStd-Regular.otf") format("opentype");
+        src: url("../src/fonts/ParisineOfficeStd-Regular.otf") format("opentype");
         font-weight: normal;
         font-style: normal;
 }
 @font-face {
         font-family: "Parisine Office Std Bold";
-        src: url("src/fonts/ParisineOfficeStd-Bold.otf") format("opentype");
+        src: url("../src/fonts/ParisineOfficeStd-Bold.otf") format("opentype");
         font-weight: bold;
         font-style: normal;
 }
@@ -45,6 +45,13 @@
 body {
         overflow: hidden;
         background:black;
+        user-select:none;
+}
+
+#app {
+    width:1920px;
+    height:1080px;
+    position:relative;
 }
 
 /* Utils */
@@ -57,7 +64,7 @@ body {
         left: 0;
         width: 100%;
         height: 100%;
-        background: url('src/img/lignes-bg.png') no-repeat center center/cover;
+        background: url('../src/img/lignes-bg.png') no-repeat center center/cover;
         pointer-events: none;
         z-index: -1;
 }
@@ -75,7 +82,7 @@ body {
         content: "";
         position: absolute;
         z-index: 1;
-        background: url('src/img/motif-cabane-douanier.png') no-repeat center center/cover;
+        background: url('../src/img/motif-cabane-douanier.png') no-repeat center center/cover;
         top: 0;
         width: 30px;
         height: 100%;
@@ -84,7 +91,7 @@ body {
         content: "";
         position: absolute;
         z-index: 1;
-        background: url('src/img/motif-cabane-douanier-court.png') no-repeat bottom right;
+        background: url('../src/img/motif-cabane-douanier-court.png') no-repeat bottom right;
         bottom: 0;
         right: 0;
         width: 80px;
@@ -101,6 +108,13 @@ body {
         background: linear-gradient(180deg, rgba(255, 255, 255, 0.70) 0%, rgba(203, 193, 186, 0.70) 100%), #FFF;
         box-shadow: 0 4px 4px 0 rgba(3, 12, 20, 0.15);
         backdrop-filter: blur(5px);
+        transition:1s;
+}
+.btn:active:not(.unclickable),
+.btn.active {
+        background:#242424;
+        color:#fff;
+        transition:.2s;
 }
 .btn.success{
         background: #0B6971;
@@ -142,10 +156,10 @@ body {
         pointer-events: none;
 }
 .texture-fumé {
-        background-image: url('src/img/texture-fumé.jpg');
+        background-image: url('../src/img/texture-fumé.jpg');
 }
 .texture-papier {
-        background-image: url('src/img/texture-papier.jpg');
+        background-image: url('../src/img/texture-papier.jpg');
 }
 
 /* Home */
@@ -157,7 +171,7 @@ body {
         background-color: #242424;
 }
 #home .motif-cabane-douanier:before{
-        background: url('src/img/motif-cabane-douanier-court.png') no-repeat top left;
+        background: url('../src/img/motif-cabane-douanier-court.png') no-repeat top left;
         bottom: 0;
         left: 0;
         width: 80px;
@@ -386,14 +400,20 @@ body {
 }
 
 #quiz #question-container{
-        display: flex;
+        display: none;
         align-items: center;
         gap: 48px;
         flex-direction:  column;
+        flex-basis: 55%;
 }
 #quiz #question-container .question{
-        max-width: 75%;
+        /* max-width: 75%; */
         text-wrap: wrap;
+        text-align: center;
+}
+#quiz #question-container .question .question-num {
+        font-size:75%;
+        margin-bottom:10px;
 }
 #quiz #question-container .answers{
         display: flex;
@@ -410,7 +430,7 @@ body {
 }
 
 #quiz #end-screen {
-        display: flex;
+        display: none;
         flex-direction: column;
         align-items: center;
         gap: 32px;
